# LyricsPyRobot

./: .gitignore  LICENSE  LICENSE.md  README.md  Update_db.py  bot.py  config.py  config.py.example  crowdin.yml  db.py  inline.py  locale.py  locales.py  pyproject.toml  requirements.txt  spoti.py  traducao.json  users.db  utils.py
.github/workflows/: codeql.yml
locales/cs-CZ/: letra.json  start.json
locales/de-DE/: start.json
locales/en-HT/: callback.json  donate.json  inline.json  letra.json  lfm.json  main.json  myspotify.json  np.json  spoti.json  start.json
locales/en-US/: callback.json  donate.json  donation.json  inline.json  letra.json  lfm.json  main.json  myspotify.json  np.json  privacy.json  settings.json  spoti.json  start.json
locales/eo-UY/: callback.json  donate.json  inline.json  letra.json  lfm.json  main.json  myspotify.json  np.json  privacy.json  spoti.json  start.json
locales/es-ES/: callback.json  donate.json  inline.json  letra.json  lfm.json  main.json  myspotify.json  np.json  privacy.json  spoti.json  start.json
locales/fi-FI/: callback.json
locales/fr-FR/: callback.json
locales/gl-ES/: callback.json  donate.json  inline.json  letra.json  lfm.json  main.json  myspotify.json  np.json  privacy.json  spoti.json  start.json
locales/he-IL/: callback.json  inline.json  letra.json  lfm.json  main.json  spoti.json  start.json
locales/it-IT/: main.json
locales/nl-NL/: spoti.json  start.json
locales/pt-BR/: callback.json  donate.json  lfm.json  (+10 more)
lyricspybot/: __main__.py  database.py  locales.py  utils.py
plugins/: callback.py  chosen.py  donate.py  donation.py  handle.py  inline.py  lastfm.py  letra.py  lfm.py  myspotify.py  np.py  privacy.py  settings.py  spoti.py  start.py
(+24 files in other folders)
