[project]
name = "lyricspybot"
version = "0.0.0"
description = "This bot displays the lyrics of the songs according to your search."
readme = "README.md"

dependencies = [
    "lyricspy @ https://github.com/AmanoTeam/lyricspy/archive/master.zip",
    "pillow",
    "playwright",
    "hydrogram @ https://github.com/hydrogram/hydrogram/archive/dev.zip",
    "httpx[http2]",
    "spotipy",
    "telegraph",
    "tgcrypto",
    "yarl",
    "beautifulsoup4",
]
requires-python = ">=3.10"

authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
homepage = "https://github.com/AmanoTeam/LyricsPyRobot"

[tool.ruff]
line-length = 88
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    "FURB", # refurb
    "I",    # isort
    "E",    # pycodestyle: error
    "W",    # pycodestyle: warning
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "FA",   # flake8-future-annotations
    "PL",   # pylint
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "E203",
    "PERF203",
    "PLR09",
    "PLR2004",
    "PLR1702",
    "PLW1514",
    "PLW2901",
    "PLW0603",
]

[tool.ruff.lint.isort]
known-first-party = ["lyricspybot"]
